[package]
name = "kruger"
version = "0.1.0"
authors = ["Jair <jair.quinonez@epn.edu.ec>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
futures = "0.3.1"
sanitize-filename = "0.2"
[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.48"